# soundclone

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  autotest.py  render-build.sh
.github/workflows/: python.yaml  typescript.yaml
api/: backend.py  frontend.ts
backend/: .flaskenv  .gitignore  Pipfile  foo.py  initialize_db.py  pyproject.toml  test_seeders.py
backend/migrations/: env.py
backend/migrations/versions/: 694561e38a0e_add_indexes_to_user_and_song_fields.py  6a9dea9cd3a8_add_indexes_to_join_tables.py  6d319c040b5e_reset_migrations.py  81f4e4d0de9f_create_user_artistmeta_model.py  9e783a43326a_oops_add_timestamps_to_user.py
backend/src/: __init__.py  api.py  backend_api.py  config.py  db_to_api.py  models.py
backend/src/api/: __init__.py  artist_routes.py  auth_routes.py  aws_integration.py  comments_routes.py  likes_routes.py  playlist_routes.py  search_routes.py  song_routes.py  user_routes.py
backend/src/forms/: artist_form.py  login_form.py  playlist_form.py  signup_form.py  song_form.py
backend/src/seeds/: __init__.py  playlist.py  songs.py  users.py
frontend/: .biome.json  biome.jsonc  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AddToPlaylist.tsx  HomePage.tsx  SongListItem.tsx
frontend/src/components/ArtistPage/: ArtistPage.css  ArtistPage.module.css  ArtistPage.tsx  SongListItem.tsx
frontend/src/components/ArtistsSongsPage/: ArtistsSongsPage.css  ArtistsSongsPage.tsx
frontend/src/components/DeleteSongModal/: DeleteSongModal.css  DeleteSongModal.tsx
frontend/src/components/EditPlaylistPage/: EditPlaylistPage.css  EditPlaylistPage.tsx
frontend/src/components/EditProfileForm/: EditProfileForm.css  EditProfileForm.tsx
frontend/src/components/EditSongFormModal/: EditSongFormModal.tsx
frontend/src/components/Home/: HomePage.module.css  HomePage.tsx
frontend/src/components/Layout/: Layout.css  Layout.tsx
frontend/src/components/LikedSongsView/: LikedSongsView.css  LikedSongsView.tsx
frontend/src/components/LoginFormModal/: LoginFormModal.css  LoginFormModal.tsx
frontend/src/context/: Modal.css  Modal.tsx  ModalCore.ts  useModal.tsx
frontend/src/services/: AudioService.ts
frontend/src/store/: api.ts  constants.ts  homeSlice.ts  index.ts  playerSlice.ts  playlistSlice.ts  session.ts  slice_types.ts  users.ts
frontend/src/styles/: HomePage.css  Layout.css  index.css
frontend/src/types/: index.ts
(+40 files in other folders)
