[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "flask>=3.0.3",
    "flask-migrate>=4.0.7",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.9.2",
    "flask-login>=0.6.3",
    "werkzeug>=3.1.2",
    # "psycopg2-binary>=2.9.9",
]
[tool.ruff]
line-length = 120
[tool.pyright]
pythonVersion = "3.12"
strict = ["*"]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.387",
    "ruff>=0.7.2",
]
